fix problem with /story endpoint in FsController trying to save an animal that already exists

--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -118,7 +118,7 @@
                     <div class="form-group">
                         <label class="col-lg-3 control-label" for="weight">Weight:</label>
                         <div class="col-lg-8">
-                            <input class="form-control" type="number" name="weight" id="weight" th:value="*{weight}"/>
+                            <input class="form-control" type="number" step="0.1" min="0" name="weight" id="weight" th:value="*{weight}"/>
                         </div>
                     </div>
                     <div class="form-group">
