--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -105,7 +105,7 @@
 
                     <!--Card image-->
                     <img class="img-fluid" src="http://mdbootstrap.com/images/regular/nature/img%20(28).jpg"
-                         th:src="@{photoPost.permalink}" th:alt="${post.content}" alt="Card image cap">
+                         th:src="@{photoPost.permalink}" th:alt="${post.content}" alt="Card image cap" />
                     <!--/.Card image-->
 
                     <!--Card content-->
