--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -30,60 +30,60 @@
     </header>
     <div class="container-fluid main-body">
 
-    <form class="well" id="searchForm" role="form" action="list.html" th:action="@{/}" method="post">
-        <h3>Search for an Animal:</h3>
+    <form class="form-vertical well" id="searchForm" role="form" action="list.html" th:action="@{/}" method="post">
+        <h3>Search Foster Stories:</h3>
         <div class="row">
-        <div class="col-md-2">
-            <label for="type">
-                <strong>Type:</strong>
-            </label>
-            <select class="form-control" name="type" id="type">
-                <option value="">select...</option>
-                <option th:each="type : ${types}"
-                        th:text="${type.name}"
-                        th:value="${type.id}"
-                        th:selected="${search.typeId} == ${type.id}">Cat</option>
-            </select>
-        </div>
+            <div class="col-md-2">
+                <label for="type">
+                    <strong>Type:</strong>
+                </label>
+                <select class="form-control" name="type" id="type">
+                    <option value="">select...</option>
+                    <option th:each="type : ${types}"
+                            th:text="${type.name}"
+                            th:value="${type.id}"
+                            th:selected="${search.typeId} == ${type.id}">Cat</option>
+                </select>
+            </div>
 
-        <div class="col-md-2">
-            <label for="breed">
-                <strong>Breed:</strong>
-            </label>
-            <select class="form-control" name="breed" id="breed">
-                <option value="">select...</option>
-                <option th:each="breed : ${breeds}"
-                        th:text="${breed.name}"
-                        th:value="${breed.id}"
-                        th:selected="${search.breedId} == ${breed.id}">Cat</option>
-            </select>
-        </div>
+            <div class="col-md-2">
+                <label for="breed">
+                    <strong>Breed:</strong>
+                </label>
+                <select class="form-control" name="breed" id="breed">
+                    <option value="">select...</option>
+                    <option th:each="breed : ${breeds}"
+                            th:text="${breed.name}"
+                            th:value="${breed.id}"
+                            th:selected="${search.breedId} == ${breed.id}">Cat</option>
+                </select>
+            </div>
 
-        <div class="col-lg-4">
-            <label for="name">
-                <Strong>Name:</Strong>
-            </label>
-            <input class="form-control" type="text" name="name" id="name" placeholder="Animal's name" th:value="${search.name}"/>
-        </div>
+            <div class="col-lg-4">
+                <label for="name">
+                    <Strong>Name:</Strong>
+                </label>
+                <input class="form-control" type="text" name="name" id="name" placeholder="Animal's name" th:value="${search.name}"/>
+            </div>
 
-        <div class="col-sm-2">
-            <label for="locale">
-                City/Zip
-            </label>
-            <input class="form-control" type="text" name="locale" id="locale" placeholder="City or Zip" />
-        </div>
+            <div class="col-sm-2">
+                <label for="locale">
+                    City/Zip:
+                </label>
+                <input class="form-control" type="text" name="locale" id="locale" placeholder="City or Zip" />
+            </div>
 
-        <div class="col-sm-2">
-            <label for="animalId">
-                <strong>Animal ID:</strong>
-            </label>
-            <input class="form-control" type="text" name="animalId" id="animalId" placeholder="ID" th:text="${search.id}"/>
+            <div class="col-sm-2">
+                <label for="animalId">
+                    <strong>Animal ID:</strong>
+                </label>
+                <input class="form-control" type="text" name="animalId" id="animalId" placeholder="ID" th:text="${search.id}"/>
+            </div>
         </div>
-        </div>
-        <div class="row btn">
-        <button class="btn" type="submit" id="search" name="action" value="search">Search</button>
-        <button class="btn" type="submit" id="clear" name="action" value="clear">Clear</button>
-        </div>
+            <div class="row btn">
+            <button class="btn btn-primary" type="submit" id="search" name="action" value="search">Search</button>
+            <button class="btn btn-primary" type="submit" id="clear" name="action" value="clear">Clear</button>
+            </div>
 
     </form>
 
