--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -245,9 +245,10 @@
                              id="tumblr-logo"
                              th:src="@{images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png}"/>
                     </label>
-                    <div class="col-lg-8">
-                        <input class="form-control" type="url" name="tumblr" id="tumblr" th:value="*{tumblr}" th:field="*{tumblr}"/>
-                    </div>
+                        <div class="col-lg-6">
+                                <input class="form-control" type="text" name="tumblr" id="tumblr" th:value="*{tumblr}" th:field="*{tumblr}"/>
+                        </div>
+                        <div class="control-label col-lg-2 pull-left">.tumblr.com</div>
                 </div>
 
                 <div class="form-group">
