--- a/src/main/resources/templates/story.html
+++ b/src/main/resources/templates/story.html
@@ -42,17 +42,25 @@
 <div class="container-fluid main-body">
 
     <div class="container main-body">
+
         <h2>Animal Rescue Stories</h2>
         <div class="row" id="animal-avatar">
             <div class="col-md-3">
-                <div class="text-center">
-                    <img src="//placehold.it/100" class="avatar img-circle" alt="avatar"/>
-                    <h6>Upload Main Image</h6>
-                    <input type="file" name="user-image" id="user-image" class="form-control"/>
-                </div>
+                <form class="form-horizontal" id="animal-image" role="form" action="story.html"
+                      enctype="multipart/form-data"
+                      th:action="@{/story/image}" method="post" th:object="${animal}">
+                    <input type="hidden" name="id" id="id" th:value="${animal.id}"/>
+                    <div class="text-center">
+                        <img src="//placehold.it/100" class="avatar img-circle" alt="avatar"/>
+                        <h6>Upload Main Image</h6>
+                        <input type="file" name="file" id="file" class="form-control"/>
+                        <button class="btn" type="submit" id="saveImage" name="action" value="file">Add image</button>
+                    </div>
+                </form>
             </div>
             <div class="col-md-9 animal-story">
-                <form class="form-horizontal" id="pick-animal" role="form" action="story.html" th:action="@{/story}" method="post" th:object="${animals}">
+                <form class="form-horizontal" id="pick-animal" role="form" action="story.html"
+                      th:action="@{/story}" method="post" th:object="${animals}">
                     <div class="form-group" th:if="${count >1}">
                         <label class="col-lg-3 control-label" for="animal-select">Select Animal</label>
                         <div class="col-lg-8">
@@ -71,7 +79,7 @@
             </div>
 
             <div class="col-md-9 animal-story">
-                <form class="form-horizontal" id="animal-edit" role="form" action="story.html" enctype="multipart/form-data"
+                <form class="form-horizontal" id="animal-edit" role="form" action="story.html"
                       th:href="@{/story}" method="post" th:object="${animal}">
                     <div class="form-group leftColumn">
                         <div id="stats">
@@ -136,7 +144,7 @@
                     <div class="form-group">
                         <label class="col-lg-3 control-label" for="adoption-date" >Available Adoption Date</label>
                         <div class="col-lg-3">
-                            <input class="date form-control" type="date" name="adoption-date" value="12/01/2016"></input>
+                            <input class="date form-control" type="date" name="adoption-date" value="12/01/2016" id="adoption-date"></input>
                             <script type="text/javascript">
                                 $(function() {
                                     $('input[name="adoption-date"]').daterangepicker({
@@ -153,7 +161,7 @@
                                  th:src="@{images/tumblr_logotype_whiteonblue/tumblr_logotype_whiteonblue_128.png}" alt="Tumblr logo" />
                         </label>
                         <div class="col-lg-6">
-                            <input class="form-control" type="url" name="tumblr" id="tumblr" th:value="*{tumblr}" placeholder="blog name"/>
+                            <input class="form-control" type="text" name="tumblr" id="tumblr" th:value="*{tumblr}" placeholder="blog name"/>
                         </div>
                         <div class="control-label col-lg-2 pull-left">.tumblr.com</div>
                     </div>
