--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner" th:fragment="pageHead">
+<header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner" th:replace="fragments/pageHead :: pageHead">
     <div class="container-fluid">
         <div class="navbar-header">
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
