--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -86,7 +86,7 @@
 }
 
 .main-body {
-    padding-top: 50px;
+    padding-top: 55px;
 }
 
 #tumblr-logo {
@@ -105,4 +105,14 @@ body {
     padding-bottom: 5px;
     padding-right: 5px;
     padding-left: 5px;
+}
+
+.img-circle {
+    border-radius: 50%;
+    width: 300px;
+}
+
+hr {
+    margin-top: 5px;
+    margin-bottom: 0px;
 }
