--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -36,15 +36,16 @@
 
         <div class="row">
             <div class="col-md-8">
-                <img class="img-responsive img-rounded" src="http://placehold.it/900x350" alt="" />
+                <img class="img-responsive img-rounded" src="http://placehold.it/900x350" th:src="@{/}" />
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
-                <h1>Business Name or Tagline</h1>
-                <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it,
-                    but it makes a great use of the standard Bootstrap core components. Feel free to use this template
-                    for any project you want!</p>
-                <a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
+                <h1>Shadow</h1>
+                <p>Shadow is an energetic ball chaser. He is very friendly and will lick you to death if
+                    given the chance. But throw a ball and is will be off chasing it until you arm is too
+                    tired to throw again. As the child of working dogs in Texas he also loves hearding people
+                and other animals.</p>
+                <a class="btn btn-primary btn-lg" th:href="@{/viewStory(animalId=0)}">My Story</a>
             </div>
             <!-- /.col-md-4 -->
         </div>
