put static feature story pic on list page

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -36,7 +36,7 @@
 
         <div class="row">
             <div class="col-md-8">
-                <img class="img-responsive img-rounded" src="http://placehold.it/900x350" th:src="@{/}" />
+                <img class="img-responsive img-rounded" src="http://placehold.it/900x350" th:src="@{/story/image(id=636)}" id="feature" />
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
@@ -45,7 +45,7 @@
                     given the chance. But throw a ball and is will be off chasing it until you arm is too
                     tired to throw again. As the child of working dogs in Texas he also loves hearding people
                 and other animals.</p>
-                <a class="btn btn-primary btn-lg" th:href="@{/viewStory(animalId=0)}">My Story</a>
+                <a class="btn btn-primary btn-lg" th:href="@{/viewStory(animalId=636)}">My Story</a>
             </div>
             <!-- /.col-md-4 -->
         </div>
