--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -32,14 +32,14 @@
     <header class="row" th:replace="fragments/pageHead :: pageHead">
         <h1>Foster Story</h1>
     </header>
-    <div class="container main-body">
+    <div class="container-fluid main-body">
 
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8 col-xs-8">
                 <img class="img-responsive img-rounded" src="http://placehold.it/900x350" th:src="@{/story/image(id=636)}" id="feature" />
             </div>
             <!-- /.col-md-8 -->
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-4">
                 <h1>Shadow</h1>
                 <p>Shadow is an energetic ball chaser. He is very friendly and will lick you to death if
                     given the chance. But throw a ball and is will be off chasing it until you arm is too
