--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -117,7 +117,7 @@ hr {
     margin-bottom: 0px;
 }
 
-#feature {
-    width: 900px;
-    height: 425px;
-}
+/*#feature {*/
+    /*width: 900px;*/
+    /*height: 425px;*/
+/*}*/
