--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -32,14 +32,14 @@
     <header class="row" th:replace="fragments/pageHead :: pageHead">
         <h1>Foster Story</h1>
     </header>
-    <div class="container-fluid main-body">
+    <div class="container main-body">
 
         <div class="row">
-            <div class="col-md-8 col-xs-8">
+            <div class="col-md-8 col-xs-12">
                 <img class="img-responsive img-rounded" src="http://placehold.it/900x350" th:src="@{/story/image(id=636)}" id="feature" />
             </div>
             <!-- /.col-md-8 -->
-            <div class="col-md-4 col-xs-4">
+            <div class="col-md-4 col-xs-12">
                 <h1>Shadow</h1>
                 <p>Shadow is an energetic ball chaser. He is very friendly and will lick you to death if
                     given the chance. But throw a ball and is will be off chasing it until you arm is too
@@ -53,7 +53,7 @@
     <hr />
     <div class="container-fluid" >
 
-        <form class="form-vertical well" id="searchForm" role="form" action="list.html" th:action="@{/}" method="post">
+        <form class="well" id="searchForm" role="form" action="list.html" th:action="@{/}" method="post">
         <h3>Search Foster Stories:</h3>
         <div class="row">
             <div class="col-md-2">
