fix animal retentionand selection on story page

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -121,3 +121,8 @@ hr {
     /*width: 900px;*/
     /*height: 425px;*/
 /*}*/
+
+#select-hr {
+    border-top: 2px solid #425370;
+    margin-bottom: 10px;
+}
